--- a/lectur/lectur_app/templates/base.html
+++ b/lectur/lectur_app/templates/base.html
@@ -258,7 +258,7 @@
 	</ul>
 
 {%else%}
-<ul class="navIndex" style="float: none; clear: both; text-align: center;">
+<ul class="navIndex" style="float: none; clear: both; text-align: center; background-color: #2d388a; width:100%">
 	<li><a href="/registrate/">Regístrate </a></li>
 	<li><a href="/inicia_sesion/"> Ingresa </a></li>
 </ul>
