--- a/lectur/lectur_app/templates/index.html
+++ b/lectur/lectur_app/templates/index.html
@@ -15,6 +15,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto|Roboto+Mono|Roboto+Slab' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Yantramanav:100" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
 	<link href="{% static "css/style.css" %}" rel="stylesheet" />
 
