--- a/lectur/lectur_app/templates/ubicacion_comunidades.html
+++ b/lectur/lectur_app/templates/ubicacion_comunidades.html
@@ -86,7 +86,7 @@
 					<!--<h3 class="texto-par-dos" >{{comu.nombre}}</h3>-->
 					<h3 class="texto-par-dos" style="font-size: 15px;" >{{comu.descripcion}}</h3>
 
-					<a href="/comunidades/{{comu.slug}}/informacion" class="boton-actividad" align="center" style="line-height: 50px; font-size: 13px; ">
+					<a href="/comunidades/{{comu.slug}}/actividades" class="boton-actividad" align="center" style="line-height: 50px; font-size: 13px; ">
 
 						Ver más
 
