--- a/lectur/lectur_app/templates/vista_actividad.html
+++ b/lectur/lectur_app/templates/vista_actividad.html
@@ -5,7 +5,7 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title" style="color:#99be16; font-family: Raleway; font-size: 26px;">{{taller.nombre}}</h4>
         </div>
-        <div class="modal-body" style="padding-bottom: 0px; padding-top: 0px;">
+        <div class="modal-body" style="padding-bottom: 0px; padding-top: 0px;" align="left">
 <div class="row">
   <div class="col-md-3 no-padding"><div class="imagen-actividad" style="background-image: url('{{taller.imagen.url}}')">
  </div>
