--- a/lectur/lectur_app/templates/vista_actividades_comunidad.html
+++ b/lectur/lectur_app/templates/vista_actividades_comunidad.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<div class="col-md-12 seccion-actividad ">
+<div class="col-md-12 seccion-actividad " align="left">
 
 <div class="row boton-foro" style="">
 	
